[project]
name = "pdm-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Meng Xiangzhuo", email = "aumo@foxmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
